@startuml
skinparam linetype ortho
hide empty members

skinparam class {
	ArrowColor SteelBlue
	BorderColor Dimgray
	HeaderBackgroundColor SteelBlue
	BackgroundColor White
	FontName Calibri bold
	AttributeFontColor #333
	AttributeFontName Calibri
	AttributeFontSize 13
	FontColor Ivory
	FontSize 15
}

class DataImportUI{
- ctrl: DataImportCTRL
- filepath: Path

+ loadGeoAreaFile()
+ showGAsNumberInFile()
+ importGAs()
}

class DataImportCTRL{
- gaList: GAList

+ readGeoAreasFromFile()
+ getAllSensorsInFile()
+ importGeoAreasFromFile()
+ failedToAdd()
}

class DataImport{
- parser: JSONParser
- configFilePath: Path
- gaList: GAList

+ readConfigFile()
+ getFileExtension()
+ getClassName()
+ loadGeoAreaFiles()
+ importFromFileGeoArea()
}

interface FileReaderGeoArea {
+ loadData()
}

class JSONReaderGeoArea{
- filepath: Path
- parser: JSONParser

+ loadData()
- readFile()
- importGA()
- importOccupationArea()
- importSensorList()
- importSensor()
- importLocation()
}

class XMLReaderGeoArea{
+ loadData()
- importGeographicalArea()
- importLocation()
- getTagValue()
- addSensorListToGA()
}

 class GAList {
- listOfGa: List<GeographicalArea>
- notAdded: List<Geographical Area>

+ addGA()
+ getNotAdded()

  }


class GeographicalArea {
- identification : String
- designation : String
- typeOfGa: TypeGA
- location: Location
- sensorListInGa: SensorList
- occupation: OccupationArea
+ GeographicalArea(identification,\n designation,typeOfGa,occupation,location)
 }


 class SensorList{
 - sensorList: List<Sensor>
 }

 class Sensor {
   - id: String
   - designation: String
   - location: Location
   - sensorType: SensorType
   - startDate: Calendar
   - unit: String
   - readingList: ReadingList
   + Sensor(id, name,calendar,\n location,type,unit,readingList)
   }

DataImportUI -> DataImportCTRL
DataImportCTRL -> DataImport
DataImportCTRL -> GAList

DataImport --> GAList
DataImport --> FileReaderGeoArea
FileReaderGeoArea <|. JSONReaderGeoArea
FileReaderGeoArea <|. XMLReaderGeoArea

JSONReaderGeoArea --> GeographicalArea
JSONReaderGeoArea --> SensorList
JSONReaderGeoArea -> Sensor

XMLReaderGeoArea -> GeographicalArea
XMLReaderGeoArea -> SensorList
XMLReaderGeoArea -> Sensor

GeographicalArea -> GAList

@enduml